@@ -1,7 +1,10 @@
+DIST renderdoc-modified-6.zip 6015826 SHA256 c486b9f4fa537b00085890f592ffa5aa4be75153a701f8602105b0f2af1d46d9 SHA512 380760fcd4ec6fe3f2571ac0ce84c8cbd60a413ee5b7679beed4a87dc78ca6a3eef5932d8198476e81bbb04d2b10bfacfb7b94c0508cfaeb358f4033c7b58376 WHIRLPOOL c55a5d367ed2a66a55d472392c52ca3f44dae8c6e604e281272a68871c22fda9f4c4880989eac067e0bfcda7d27917e0f292223fdf7bf2477f30c71f332a724a
 DIST v1.0.tar.gz 39253525 SHA256 ab43370a97ee7c35b7336b9b8c90d3621e340b48bb2a9e75636bb49ded0825ec SHA512 58f32805fd7677586ba93fdad63675a5ad182c5c44f5048375494de08d2fd06a024293af3eb581a764f94d768d2c1483146e2dc86f93da4496fb2b4007de7ce1 WHIRLPOOL 78eb1e660f6a07856ace4ed5b5e07188fa5ecdb79689e556b860d51f5faa952f3e5dd4daaed39b590203bd1f05b980a3d453eeda63b5d928035f09bac6cb061f
 DIST v1.1.tar.gz 39779466 SHA256 3ee45f892f6020cadb1b5604021122fa812ac807241065336db092c98472087c SHA512 40486cfcd75227a68b34b3fcf3e94a527eb23e79c842c7c88a70172d1d14d4c13de937310a3923573818967e341913fd5c6d14c1b3e12328eadfbcf91a566d40 WHIRLPOOL fd61d5998f4690054343c003258c3dafd27178d90914537915d7123812ded181c9c191c34dc95489a8f32c7f9e9d13ca37a7e53d42eadb141eab106c3e92c27c
+DIST v1.2.tar.gz 41147527 SHA256 5050be7eea5f5721f530ad3d58ac80b3d47e1b81347e6551e4281bd06cf97a3a SHA512 98df7bd6b7fe9d488620027eab50b5e1be53644644969049ed5349d5337a946d2315363b148bc9fad6133c2690f7961070f732d9fedef33b9df5fd7f18ce439c WHIRLPOOL 05409e32afb82bfa90494e2d7c755975040733202de5d76e8a8b4bf603530f6b0cef220c57daf423a2daf72c2270db92c6148246f3b7b67f32f3cec88ce61b46
 EBUILD renderdoc-1.0.ebuild 874 SHA256 b9340aebfd99108ba0b4ca1429ac89bfe1abac733fe5b4519afb4c9a7bcdb0e8 SHA512 8dc2fa9ad6a4c8d3da22b4199bfd7cb069fd7d0f8f5a378446897fab734ab2a1e253e2a980054b4d5dd7f1835d01525d2fba8632b66920c469f641a92935e0b1 WHIRLPOOL 792b3e777d2b07d4e3bc83bbe12bed106e9c82044364be54348f57c4f5f24dfc9527b76d55490836180109e908d5800827e3cb37e6d6720dc87ac7dd637ea7c7
 EBUILD renderdoc-1.1.ebuild 874 SHA256 b9340aebfd99108ba0b4ca1429ac89bfe1abac733fe5b4519afb4c9a7bcdb0e8 SHA512 8dc2fa9ad6a4c8d3da22b4199bfd7cb069fd7d0f8f5a378446897fab734ab2a1e253e2a980054b4d5dd7f1835d01525d2fba8632b66920c469f641a92935e0b1 WHIRLPOOL 792b3e777d2b07d4e3bc83bbe12bed106e9c82044364be54348f57c4f5f24dfc9527b76d55490836180109e908d5800827e3cb37e6d6720dc87ac7dd637ea7c7
+EBUILD renderdoc-1.2.ebuild 995 SHA256 0f83304be6a4f81b4f5d7dcbd6a48b0f1715d5ba655606ab48d93e9e17f66086 SHA512 d05f699cb95678c0ac81d960aee2c233f1fc56fc334665c9b002c7c5833584c64f09abb481b4d9adc766aaa8629f566d8bc967ad361909cdaae00d847514e9b0 WHIRLPOOL 27c955ed09960392b36a143041cf8d9d9512bc638c31c82e05fb075e6102c0d5598170815287473114f09af75b8ba4e5ced375aeb719e410270a3b27a9aff9cd
 EBUILD renderdoc-9999.ebuild 888 SHA256 5a5c10e0ff74065dd2dd2016c888d15a890d2c12482bb5b7c68c971ce78946d9 SHA512 54959e6b37aa5c8091c1693dadbd3b03fb37b9222a8dfd1751b8dd8f3e93a71cf1d7036320cc08fda4c1e9efaee60d095a5289ddbc8242fca2b4fafc8077341a WHIRLPOOL e209314a3fbff6fe2809cb4ba734821e6d49a69dbe9ffee2a5c60d4feeb946e9f3f4b27aa15ccc3e347631771acea18cc51f4186cda9cec554dbd22917ddc944
-MISC ChangeLog 516 SHA256 4e6db1411d0803d6cf32770569cb0cf37c3fa9a802192d0ff36640f0841aa81e SHA512 bf57e8aa4926c7fd9f5cce11ff575746de2cb19cc7ff5b86df16cac40e82f7306cfcd0558bda98f9263e27f22f518c4ba4f770b075244d7f933dcd2e279265dd WHIRLPOOL 27e629a662b48a6aeac52cd0549bc4491c1233d904318db35742cd047c880c632a5e8c057b1689734eb241dbc95192b7501b1d3e9ef095a504e9a70eb09d1c13
+MISC ChangeLog 726 SHA256 2c7c4acbffaa0a2dae98c1014d7ab467bf21475223463a5f6746361130035fec SHA512 cbb129c040e7a0efeae8e19ebdc86fd488aa0e8db0cb547d508b32d165d9cf9ad1b935a8ee6a5c793d3eac6f5ddd9ade48602ce2d33cbb9b679018e398a52a18 WHIRLPOOL 9f15d8e671ab59bcf5aa931b20207da0dbdf20ab53b9aa43eb16521972451cc7d1a41852ee8790eb60bf3961b62c1e85d1459e42d1408a7a3feb6826f258d3a8
 MISC metadata.xml 617 SHA256 e9fbacbe415bc07df43e7f8e712ab879f7cdd471e7fb8eca804494103418b8fc SHA512 4cad8316dce107b2cd7e7eb426a106388563955c5ba333b1fcb024c4265c0d7b2fca78dcb2abdfd737fb8fe06066af22a3fec7d0db66870ba2f6739e7b9bea77 WHIRLPOOL 094c37a0562e2f09d9998d06d4917b474f599a57804a09300dba83e3fe8d489e4781d2d5924208fccb1bdea866fd42cac7abae9f72083284f24b8bb75e1d5a83
